# django-shopify-app

./: .gitignore  README.md  manage.py  pyproject.toml
ecommerce/ecommerce/: settings.py  urls.py
ecommerce/store/: models.py
ecommerce/store/migrations/: 0001_initial.py  0002_product_image.py
ecommerce/store/templates/store/: main.html
shopify_app/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
shopify_app/migrations/: 0001_initial.py
shopify_app/templates/products/: product_list.html
